<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="constraint">Constraint Layout</string>
    <string name="linear">Linear Layout</string>
    <string name="relative">Relative Layout</string>
    <string name="grid">Grid Layout</string>
    <string name="table">Table Layout</string>

    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount"></string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
</resources>
