<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <!-- The bill amount -->

    <TableRow>
        <TextView
            android:id="@+id/billAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="@string/bill_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/billAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_marginStart="8dp"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/bill_amount"
            android:textSize="20sp">
            <requestFocus />
        </EditText>
    </TableRow>

    <!-- The tip percent -->

    <TableRow>
        <TextView
            android:id="@+id/percentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tip_percent_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tip_percent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPercentDown"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/decrease"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPercentUp"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/increase"
            android:textSize="20sp" />
    </TableRow>

    <!-- the tip amount -->

    <TableRow>
        <TextView
            android:id="@+id/tipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tip_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tip_amount"
            android:textSize="20sp" />
    </TableRow>

    <!-- the total -->

    <TableRow>
        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/total_amount_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/total_amount"
            android:textSize="20sp" />
    </TableRow>

</TableLayout>