<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity">

    <!-- The bill amount -->

    <Button
        android:id="@+id/btnPercentDown"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/decrease"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/btnPercentUp"
        app:layout_constraintTop_toTopOf="@+id/percentTextView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnPercentUp"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/increase"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPercentDown"
        app:layout_constraintRight_toRightOf="@+id/billAmountEditText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1" />

    <!-- The tip percent -->

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/percentLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/bill_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="75dp"
        android:padding="10dp"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textviewTip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/percentLabel"
        app:layout_constraintTop_toTopOf="@+id/percentLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!-- the tip amount -->

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="162dp"
        android:padding="10dp"
        android:text="@string/tip_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textviewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textviewTip"
        app:layout_constraintRight_toRightOf="@+id/textviewTip"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!-- the total -->

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipLabel"
        android:layout_alignLeft="@+id/tipLabel"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/total_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textviewTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalLabel"
        android:layout_alignLeft="@+id/textviewTotal"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="12dp"
        android:padding="5dp"
        android:text="@string/total_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/totalLabel"
        app:layout_constraintLeft_toRightOf="@+id/totalLabel"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />


</android.support.constraint.ConstraintLayout>