<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/constraint"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onConstraintClick" />

    <Button
        android:id="@+id/btnLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/linear"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/btnConstraint"
        app:layout_constraintLeft_toLeftOf="@+id/btnConstraint"
        app:layout_constraintRight_toRightOf="@+id/btnConstraint"
        android:onClick="onLinearClick" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/relative"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLinear"
        app:layout_constraintLeft_toLeftOf="@+id/btnLinear"
        app:layout_constraintRight_toRightOf="@+id/btnLinear"
        android:onClick="onRelativeClick" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btnRelative"
        app:layout_constraintLeft_toLeftOf="@+id/btnRelative"
        app:layout_constraintRight_toRightOf="@+id/btnRelative"
        android:onClick="onGridClick" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGrid"
        app:layout_constraintLeft_toLeftOf="@+id/btnGrid"
        app:layout_constraintRight_toRightOf="@+id/btnGrid"
        android:onClick="onTableClick" />

</android.support.constraint.ConstraintLayout>